Bug 152156 - KDE help center does not respect window placement policy
Summary: KDE help center does not respect window placement policy
Status: RESOLVED FIXED
Alias: None
Product: khelpcenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Cornelius Schumacher
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-11 02:14 UTC by Beat Fasel
Modified: 2012-05-09 12:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Beat Fasel 2007-11-11 02:14:47 UTC
Version:           3.5.8 (using KDE KDE 3.5.8)
Installed from:    Ubuntu Packages
OS:                Linux

The KDE help center does not respect the window placement policy.

I use the centered window placement policy (under the window behavior section), however, the KDE help center does not pop up centered when launched.
Comment 1 Beat Fasel 2009-10-12 09:48:27 UTC
This bug is still valid in KDE 4.3.2.
Comment 2 Lamarque V. Souza 2012-05-06 21:16:11 UTC
Git commit b546f13eee28428363c74eac49a70f01c2f2bae6 by Lamarque V. Souza, on behalf of Maarten De Meyer.
Committed on 06/05/2012 at 23:06.
Pushed by lvsouza into branch 'KDE/4.8'.

Fix KDE help center does not respect window placement policy.
Thanks to Maarten De Meyer for this patch.
FIXED-IN: 4.8.4
REVIEW: 104662
(cherry picked from commit 1e6399ee4c4e5de0317dfcc069b292e051580f27)

M  +1    -2    khelpcenter/mainwindow.cpp

http://commits.kde.org/kde-runtime/b546f13eee28428363c74eac49a70f01c2f2bae6
Comment 3 Lamarque V. Souza 2012-05-06 21:16:16 UTC
Git commit 1e6399ee4c4e5de0317dfcc069b292e051580f27 by Lamarque V. Souza, on behalf of Maarten De Meyer.
Committed on 06/05/2012 at 23:06.
Pushed by lvsouza into branch 'master'.

Fix KDE help center does not respect window placement policy.
Thanks to Maarten De Meyer for this patch.
FIXED-IN: 4.8.4
REVIEW: 104662

M  +1    -2    khelpcenter/mainwindow.cpp

http://commits.kde.org/kde-runtime/1e6399ee4c4e5de0317dfcc069b292e051580f27
Comment 4 Beat Fasel 2012-05-09 12:39:15 UTC
Great! Thanks a lot, Lamarque, for fixing this bug!