Fix KDE help center does not respect window placement policy. Thanks to Maarten De Meyer for this patch.

BUG: 152156
FIXED-IN: 4.8.4
REVIEW: 104662